crates/solidity/testing/snapshots/bindings_output/user_types/in_contract/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or CloseBrace or EnumKeyword or EventKeyword or FixedKeyword or FunctionKeyword or Identifier or IntKeyword or MappingKeyword or ModifierKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword or UsingKeyword.
   ╭─[input.sol:2:5]
   │
 2 │ ╭─▶     type Internal is uint;
   ┆ ┆   
 7 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (1):
- Def: #1 ["Test" @ input.sol:1:10] (contract)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
───╯
